turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:11: error: reassignment to val
			state=NextState(state, c, rule);
                             ^